fixed center align bug on nav bar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2322,8 +2322,11 @@ input, select, textarea {
 		top: 0;
 		left: 0;
 		width: 100%;
-		text-align: center;
-		padding: 0.5em 0 0.5em 0;
+		/* text-align: center; */
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		/* padding: 0.5em 0 0.5em 0; */
 		z-index: 1;
 		height: 60px;
 		overflow: hidden;
@@ -2336,8 +2339,11 @@ input, select, textarea {
 			position: relative;
 			display: inline-block;
 			margin: 0;
-			top: 50%;
-			transform: translateY(-50%);
+			/* top: 50%; */
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			/* transform: translateY(-50%); */
 			height: 30px;
 			/* object-fit:fill; */
 			border-left: solid 1px #00ccbb;
@@ -2376,6 +2382,9 @@ input, select, textarea {
 				margin: 0 0.5em 0 0.5em;
 				border-radius: 0.5em;
 				padding: 0.85em;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 				border: solid 1px transparent;
 				-moz-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
 				-webkit-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
@@ -2391,8 +2400,8 @@ input, select, textarea {
 					display: block;
 					color: #ffffff;
 					text-decoration: none;
-					transform: translateY(-50%);
-					top: 50%;
+					/* transform: translateY(-50%);
+					top: 50%; */
 					border: 0;
 					outline: 0;
 				}
